Fix spacing for toggles on second line

--- a/src/styles/Chip.scss
+++ b/src/styles/Chip.scss
@@ -3,4 +3,5 @@
   padding: .4em;
   margin-right: .5em;
   border-radius: .2em;
+  margin-top: 10px;
 }
