--- a/src/styles/Result.scss
+++ b/src/styles/Result.scss
@@ -43,7 +43,7 @@
 
     .mapped-labels {
       color: red;
-      margin: 15px 0 5px;
+      margin: 5px 0 5px;
     }
   }
 }
